--- a/public/htmls/facts.html
+++ b/public/htmls/facts.html
@@ -1,4 +1,4 @@
-<h1 class="heading_color" style="text-align: center;"><strong>Facts about blood needs</strong></h1>
+<!-- <h1 class="heading_color" style="text-align: center;"><strong>Facts about blood needs</strong></h1> -->
 <h1 class="heading_color" style="text-align: center;">&nbsp;</h1>
 <ul>
 <li>Every year our nation requires about&nbsp;<strong>5 Crore units</strong>&nbsp;of blood, out of which only a meager&nbsp;<strong>2.5 Crore units</strong>&nbsp;of blood are available.</li>
