--- a/public/htmls/presscoverage.html
+++ b/public/htmls/presscoverage.html
@@ -1,4 +1,4 @@
-<h1 align="center"><strong>Press Coverages</strong></h1>
+<!-- <h1 align="center"><strong>Press Coverages</strong></h1> -->
 <p class="innerheading" align="center"><strong>2020</strong></p>
 <ol>
 <ol>
