--- a/public/htmls/projectCompleted.html
+++ b/public/htmls/projectCompleted.html
@@ -1,5 +1,5 @@
 <h1 style="text-align: center;"><strong><strong><span class="style4">Projects : Completed</span></strong></strong></h1>
-<p><strong><br />2019 - Updates from last year&hellip;</strong></p>
+<!-- <p><strong><br />2019 - Updates from last year&hellip;</strong></p> -->
 <ul>
 <ul>
 <li>This academic year 2019-20 we are supporting 30 students.<br /><br /></li>
