--- a/public/htmls/visionmission.html
+++ b/public/htmls/visionmission.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">Vision, Mission and values</h1>
+<!-- <h1 style="text-align: center;">Vision, Mission and values</h1> -->
 <p><strong>Vision</strong> :</p>
 <p>Friends2support vision is:</p>
 <p>To pave way for a safer and better tommorrow.</p>
