--- a/public/htmls/whocancant.html
+++ b/public/htmls/whocancant.html
@@ -1,4 +1,4 @@
-<h1 class="heading_color" style="text-align: center;"><strong>Who can/can't donate blood</strong></h1>
+<!-- <h1 class="heading_color" style="text-align: center;"><strong>Who can/can't donate blood</strong></h1> -->
 <p class="heading_color">&nbsp;</p>
 <p class="heading_color"><strong>Can...</strong></p>
 <p><strong>Let others benefit from your good health. Do donate blood if ...</strong></p>
