--- a/public/htmls/Achievements.html
+++ b/public/htmls/Achievements.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;"><strong>Achievements</strong></h1>
+<!-- <h1 style="text-align: center;"><strong>Achievements</strong></h1> -->
 <p>&nbsp;</p>
 <p>In a journey of more than 14 years from 14th Nov 2005 till today, F2S team has seen many ups and downs. Here are a few defining moments which have in a way recognised our efforts and strengthened our determination.<br /><br /></p>
 <ol>
