--- a/public/htmls/contribution.html
+++ b/public/htmls/contribution.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;"><strong><span class="style4">Contributions</span></strong></h1>
+<!-- <h1 style="text-align: center;"><strong><span class="style4">Contributions</span></strong></h1> -->
 <p><strong><span class="heading_color">Team Contributions:</span></strong></p>
 <ul>
 <ul>
