--- a/public/htmls/privacypolicy.html
+++ b/public/htmls/privacypolicy.html
@@ -7,7 +7,8 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <strong>Privacy Policy</strong> <p>
+    <!-- <strong>Privacy Policy</strong> -->
+     <p>
                   OMNISCIENT IT SOLUTIONS PRIVATE LIMITED built the Blood Bank Donation app as
                   a Free app. This SERVICE is provided by
                   OMNISCIENT IT SOLUTIONS PRIVATE LIMITED at no cost and is intended for use as
