--- a/public/htmls/FAQ.html
+++ b/public/htmls/FAQ.html
@@ -4,7 +4,7 @@
 <div class="placeHolder">
 
 </div>
-<div class="by"><h1>Blood donation frequently asked questions</h1></div>
+<!-- <div class="by"><h1>Blood donation frequently asked questions</h1></div> -->
 
 
 <h2>How long does it take to donate blood?</h2><ul>
