--- a/public/htmls/Achievements.html
+++ b/public/htmls/Achievements.html
@@ -56,9 +56,9 @@
             alt=""
             width="475"
             height="141"
-        /><br />On the occasion of The Digital India conclave 2016, Kanchan Devi
-        Blood Bank honoured with "Digital Trailblazer Award" from India Today
-        and, Government of Andhra Pradesh for promoting voluntary blood donation
+        /><br />On the occasion of The Digital India conclave 2016, LalIndia
+        honoured with "Digital Trailblazer Award" from India Today and,
+        Government of Andhra Pradesh for promoting voluntary blood donation
         using digital technology and social media. Please&nbsp;<a
             href="http://indiatoday.intoday.in/video/team-friends2support-trailblazer/1/796993.html"
             target="_blank"
@@ -164,11 +164,11 @@
             height="141"
         /><br />We are happy to share with you yet another proud moment of
         LalIndia as we won prestigious World Summit Youth Award (WSYA) 2013 in
-        the category of Fight Hunger, Poverty &amp; Disease.<br /><br />Kanchan
-        Devi Blood Bank mobile applicaitons has selected as one of the best
-        projects from 2500 projects from across the world.<br /><br />The award
-        is a recognition for young people who use Internet and Mobiles to get
-        Action on United Nations Millennium Development goals. Please&nbsp;<a
+        the category of Fight Hunger, Poverty &amp; Disease.<br /><br />LalIndia
+        mobile applicaitons has selected as one of the best projects from 2500
+        projects from across the world.<br /><br />The award is a recognition
+        for young people who use Internet and Mobiles to get Action on United
+        Nations Millennium Development goals. Please&nbsp;<a
             href="http://youthaward.org/winners/friends2supportorg"
             target="_blank"
             >click here</a
