--- a/public/htmls/presscoverage.html
+++ b/public/htmls/presscoverage.html
@@ -867,8 +867,8 @@
                 target="_blank"
                 >Overwhelming response to Guntur 10k walk</a
             ></strong
-        ><br />over 1500 participate in the event organised by Kanchan Devi
-        Blood Bank<br />THE HINDU - Monday 26th November 2006<br /><br />
+        ><br />over 1500 participate in the event organised by LalIndia<br />THE
+        HINDU - Monday 26th November 2006<br /><br />
     </li>
     <li>
         <strong
